fix: use highest point in bounds as target if possible